<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_home">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="sky_daily">Sky Daily</string>
    <string name="sky_network">Sky Network</string>
    <string name="share_cards">Share Cards</string>
    <string name="add_cards">Add cards</string>
    <string name="my_cards">My cards</string>
    <string name="card_holder">Card Holder</string>
    <string name="cardholder" />
    <string name="share">share</string>
    <string name="sky_news">Sky News</string>
    <string name="skynewsimages">skynewsimages</string>
    <string name="skycardlogo">skycardlogo</string>
    <string name="todo">TODO</string>
    <string name="abc">TODO</string>
    <string name="signuplogo">SignupLogo</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="network">network</string>
    <string name="loginlogo">loginLogo</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="add">add</string>
    <string name="cards">cards</string>
    <string name="card">Card</string>
    <string name="holder">holder</string>
    <string name="my">My</string>
    <string name="sky">Sky</string>
    <string name="daily">daily</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_notifications">Notifications</string>
    <string name="nav_add_card">Add Card</string>
    <string name="nav_card_holder">Card Holder</string>
    <string name="nav_sky_daily">Sky Daily</string>
    <string name="nav_sky_network">Sky Network</string>
    <string name="nav_share_cards">Share Cards</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Notifications</item>
        <item>Add Card</item>
        <item>My Cards</item>
        <item>Sky Daily</item>
        <item>Sky Network</item>
        <item>Share Cards</item>
        <item>Settings</item>
        <item>Log Out</item>
    </string-array>

    <string name="action_logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">or</string>

</resources>