<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            android:backgroundTint="@color/white"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            tools:targetApi="lollipop" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="500dp"
            android:layout_below="@+id/tvskyNews"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/skynewsimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/skynewsimages" />

            <!-- Scrollable content -->
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:clipToPadding="false">

        <!-- Scrollable content -->
    </androidx.core.widget.NestedScrollView>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="277dp"
            android:layout_marginTop="150dp"
            android:columnCount="3"
            android:padding="10dp"
            android:rowCount="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="8dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_addcard"
                        android:clickable="true"
                        android:contentDescription="TODO"
                        android:focusable="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_cards"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="8dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_card_holder"
                        android:contentDescription="@string/cardholder"
                        android:clickable="true"
                        android:focusable="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_holder"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="8dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mycards"
                        android:contentDescription="@string/my_cards"
                        android:clickable="true"
                        android:focusable="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_cards"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="8dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_skydaily"
                        android:contentDescription="@string/sky_daily"
                        android:clickable="true"
                        android:focusable="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sky_daily"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="1dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_skynetwork"
                        android:contentDescription="@string/sky_network"
                        android:clickable="true"
                        android:focusable="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sky_network"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="1dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sharecard"
                        android:contentDescription="@string/share_cards"
                        android:clickable="true"
                        android:focusable="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_cards"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>

        <TextView
            android:id="@+id/tvskyNews"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/gridView"
            android:layout_marginTop="450dp"
            android:text="@string/sky_news"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

<com.google.android.material.bottomnavigation.BottomNavigationView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/botom_navigation"
    app:itemBackground="@color/white"
    app:itemTextColor="@drawable/selector"
    app:itemIconTint="@drawable/selector"
    app:menu="@menu/menu_navigation"
    android:layout_alignParentBottom="true"/>

        <ImageView
            android:id="@+id/imageViewlogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_anchorGravity="top|center"
            app:srcCompat="@mipmap/sky_card_logo_foreground"
            android:contentDescription="@string/skycardlogo"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>